--- a/mobile/src/main/res/layout/activity_auth.xml
+++ b/mobile/src/main/res/layout/activity_auth.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/fragment_container"
@@ -9,20 +9,21 @@
 
     <Button
             android:id="@+id/startBtn"
+            style="@style/RoundedBtn.FillAccent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/RoundedBtn.FillAccent"
             android:textAppearance="@style/Title.White"
+            android:text="Are you ready?"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
-            android:text="Are you ready?"/>
+    />
 
-    <androidx.constraintlayout.widget.Guideline
+    <android.support.constraint.Guideline
             android:id="@+id/guideline"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.9"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            app:layout_constraintGuide_percent="0.9"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</android.support.constraint.ConstraintLayout>
