--- a/mobile/src/main/res/layout/activity_camera.xml
+++ b/mobile/src/main/res/layout/activity_camera.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
     <com.otaliastudios.cameraview.CameraView
             android:id="@+id/camera"
@@ -12,6 +13,58 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+
+    <TextView
+            android:id="@+id/statusBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:visibility="visible"
+            android:gravity="center"
+            android:background="@color/green"
+            android:textColor="@color/blue"
+            android:text="High intensity"
+            android:visibility="gone"/>
+
+    <TextView
+            android:id="@+id/firstDeviceTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxLines="3"
+            tools:text="asdasdas'n\nsadfsdf\nasdfasf"
+            android:padding="8dp"
+            android:textColor="@color/red"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/statusBar"
+    />
+
+
+    <TextView
+            android:id="@+id/firstDeviceHRTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxLines="3"
+            tools:text="asdasdas'n\nsadfsdf\nasdfasf"
+            android:padding="8dp"
+            android:textColor="@color/red"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/firstDeviceTV"
+    />
+
+
+    <TextView
+            android:id="@+id/firstDeviceLinearTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxLines="4"
+            tools:text="asdasdas'n\nsadfsdf\nasdfasf"
+            android:padding="8dp"
+            android:textColor="@color/red"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/firstDeviceHRTV"
+    />
     <Button
             android:id="@+id/buttonRecord"
             android:layout_width="60dp"
