--- a/mobile/src/main/res/menu/bottom_navigation_main.xml
+++ b/mobile/src/main/res/menu/bottom_navigation_main.xml
@@ -4,7 +4,7 @@
     <item
             android:id="@+id/action_favorites"
             android:enabled="true"
-            android:icon="@drawable/ic_about"
+            android:icon="@drawable/ic_history"
             app:showAsAction="ifRoom"
             android:title="favorites"/>
     <item
