--- a/mobile/src/main/res/layout/activity_camera.xml
+++ b/mobile/src/main/res/layout/activity_camera.xml
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:background="@color/green"
             android:textColor="@color/blue"
-            android:text="High intensity"
+            tools:text="High intensity"
             android:visibility="gone"/>
 
     <TextView
