--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
 
     <color name="blue">#0000ff</color>
     <color name="white">#ffffff</color>
-    <color name="red">#ff0000</color>
-    <color name="green">#00ff00</color>
+    <color name="red">#77ff0000</color>
+    <color name="green">#7700ff00</color>
     <color name="accentDisable">#99D81B60</color>
 
 
